--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@use-expo/font": "^2.0.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^8.10.0",
     "prop-types": "^15.8.1",
     "react": "18.0.0",
     "react-native": "0.69.5",
